test/libsolidity/syntaxTests/specialFunctions/abidecode/abi_decode_invalid_argument_indexed_array_literal.sol
contract C {
    function f() pure public {
        abi.decode("", ([uint][2]));
    }
}
// ----
// TypeError 9563: (69-73): Invalid mobile type.
